# bertrand

./: .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  repo_card.xcf
.github/actions/deploy-conan-to-bintray/: Dockerfile  README.md  action.yml  deploy-to-conan.sh
.github/actions/installation-tests/: Dockerfile  README.md  action.yml
.github/workflows/: ccpp.yml  ci.yml  release.yml
include/bertrand/: bertrand.hpp
test/: CMakeLists.txt  conanfile.txt  installation-tests.sh  test-program-termination.sh
test/conan-installation-test/: CMakeLists.txt  conanfile.txt
test/include/: catch.hpp
test/installation-test/: CMakeLists.txt
test/installation-test-subdirectory/: CMakeLists.txt
test/installation-test/src/: main.cc
test/src/: bertrand_tests.cc  failing_contract.cc  in_operator_tests.cc  text_tests.cc
test/stacktrace-test/src/: main.cpp
test/stacktrace_test/src/: stacktrace_test.cc
